	PR c++/59659 	* typeck2.c (massage_init_elt): New. 	(process_init_constructor_record) 	(process_init_constructor_union): Use it. 	(process_init_constructor_array): Use it.  Use RANGE_EXPR. 	(split_nonconstant_init_1): Handle it. 	* semantics.c (cxx_eval_vec_init_1): Use force_rvalue.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206639 138bc75d-0d04-0410-961f-82ee72b054a4